--- a/assets/style.css
+++ b/assets/style.css
@@ -42,7 +42,7 @@ h1, h5{
 .side-bar, .main-content{
     padding: 10px;
 }
-.wrapper{
+.wrapper, .modal-content{
     background-color: rgb(156, 61, 16);
     border-radius: 15px; /*rounded boxes*/
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 1), 0 6px 20px 0 rgba(0, 0, 0, 1);
@@ -54,9 +54,9 @@ h1, h5{
     background-color:rgb(226, 183, 41);
     border-color: rgb(226, 183, 41);
 }
-.btn:hover{
-    background-color: rgb(39, 7, 7);
-    border-color: rgb(39, 7, 7);
+.btn:hover, .btn:active{
+    background-color: rgb(39, 7, 7) !important;
+    border-color: rgb(39, 7, 7) !important;
 }
 .list-group, .card{
     color: rgb(124, 29, 29);
